Fix bug of overflowing users in groups column

--- a/src/app/browser/components/BrowserItem.less
+++ b/src/app/browser/components/BrowserItem.less
@@ -186,3 +186,9 @@
 .browser-item-link {
   outline: none;
 }
+
+.group-browser-info-wrapper {
+  white-space: normal;
+  height: 46px;
+  overflow: hidden;
+}
